home page changes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<div class="site-branding col-sm-2">
 						<h1 class="site-title">
 							<a href="homepage-1.html" title="Dheep insights" rel="home">
-								<img src="images/logo.png" alt="logo">
+								<img src="images/logo1.png" alt="logo">
 							</a>
 						</h1>
 					</div>
