home page changes

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								</button>
 								<ul class="nav navbar-nav">
 									<li><a href="#">Home</a></li>
-									<li><a href="#">About Us<</a></li>
+									<li><a href="#">About Us</a></li>
 									<li><a href="#">Our Services</a></li>
 									<li><a href="#">Pricing</a></li>
 									<li><a href="#">About Us</a></li>
