--- a/master.html
+++ b/master.html
@@ -89,7 +89,7 @@
 						<div class="section-content">
 							<div class="container">
 								<div class="row">
-									<div class="col-md-9">
+									<div class="col-md-8">
 										<div id="primary">
 											<div class="resources-post-content">
 												<h1 class='text-subtle'>Let's start our first master form</h1>
@@ -244,7 +244,7 @@
 													</div>
 												</div>	
 												<div class="section transport-section">
-													<p class="text-primary font20"><span class="numberCircle mr-15">4</span>Transportation</p>
+													<p class="text-primary font16"><span class="numberCircle mr-15">4</span>Transportation</p>
 													  <div class="contact-form">
 														<div class="row">
 															<div class="col-sm-6">
@@ -282,7 +282,7 @@
 													
 												</div>	
 												<div class="section product-section">
-													<p class="text-primary font20"><span class="numberCircle mr-15">5</span>Products/ Services Transported (SAC/HSN)</p>
+													<p class="text-primary font16"><span class="numberCircle mr-15">5</span>Products/ Services Transported (SAC/HSN)</p>
 													  <div class="contact-form">
 														<div class="row">
 															<div class="col-sm-4">
@@ -314,7 +314,7 @@
 													
 												</div>	
 												<div class="section payemnt-section">
-													<p class="text-primary font20"><span class="numberCircle mr-15">5</span>Payments</p>
+													<p class="text-primary font16"><span class="numberCircle mr-15">5</span>Payments</p>
 													  <div class="contact-form">
 														<div class="row">
 															<div class="col-sm-6">
@@ -344,27 +344,149 @@
 											</div>	
 										</div>
 									</div>
-									<div class="col-md-3">
+									<div class="col-md-4">
 										<div id="secondary" class="widget">
-											<h3>Article Categories</h3>
-											<ul>
-												<li class="active">
-													<a href="#">Financial</a>
-													<ul>
-														<li><a href="#">Management</a></li>
-														<li><a href="#">Taxes</a></li>
-														<li><a href="#">Review</a></li>
-														<li><a href="#">Reporting</a></li>
-													</ul>
-												</li>
-												<li><a href="#">Taxes</a></li>
-												<li><a href="#">Security</a></li>
-												<li><a href="#">Management</a></li>
-												<li><a href="#">Investing</a></li>
-												<li><a href="#">Projections</a></li>
-												<li><a href="#">Reserach</a></li>
-												<li><a href="#">Retirement</a></li>
-											</ul>
+											<div class="row invoicedate">
+												<div class="col-sm-8 col-md-8">
+													<p class="mt-10 font16 text-primary">Mar 08 2018 <i class="fa fa-edit font16"></i></p>
+												</div>
+												<div class="col-sm-4 col-md-4">
+													<button type="button"  class="btn bg-cta fontLato text-white">Clone</button>
+												</div>
+											</div>
+											<hr>
+											<div class="row documents">
+												<div class="col-md-12 text-primary">
+													<p class="font16 mt-10"><i class="fa fa-file font16"></i> Documents</p>
+												</div>
+												<div class="col-md-12">
+												<div class="row">
+													<div class="col-md-3 pr-0"><div style="width:100%;height:75px" class="bg-light-02"></div></div>
+													<div class="col-md-3 pr-0"><div style="width:100%;height:75px" class="bg-light-02"></div></div>
+													<div class="col-md-3 pr-0"><div style="width:100%;height:75px" class="bg-light-02"></div></div>
+													<div class="col-md-3 pr-0"><div style="width:100%;height:75px" class="bg-light-02"></div></div>
+												</div>
+												<div class="row mt-10">
+													<div class="col-md-8">
+														<button type="button"  class="btn bg-light-02 col-md-12">Print Documents</button>
+													</div>
+													<button type="button"  class="col-md-4  btn bg-cta fontLato text-white">Preview</button>													
+												</div>
+												</div>
+											</div>
+											<hr>
+											<div class="row donowrong">
+												<div class="col-md-12">
+													<p class="font16 text-primary mt-10">Do No Wrong <i class="fa fa-smile-o font20"></i></p>
+												</div>
+												<div class="col-md-12">
+													<div class="row">
+														<div class="col-md-8">
+															<p class="font16 mt-5"> <i class="fa fa-window-close font20 fontred"></i> 2 Errors</button>
+														</div>
+														<button type="button"  class="col-md-4  btn bg-cta fontLato text-white">Preview</button>
+														<div class="col-md-8">
+															<p class="font16 mt-5"> <i class="fa fa-warning font20 fontOrange"></i> 1 Warning</button>
+														</div>
+														<button type="button"  class="col-md-4  btn bg-cta fontLato text-white">Preview</button>
+														<div class="col-md-12">
+															<a class="text-blue font16" href="#">Get help from support</a>
+														</div>
+													</div>
+												</div>
+											</div>
+											<hr>
+											<div class="row summary">
+												<div class="col-md-12">
+													<p class="font16 text-primary mt-10"><i class="fa fa-tasks font20"></i> Tax Summary</p>
+												</div>
+												<div class="col-md-12">
+													<div class="row">
+														<div class="col-md-6">
+															<p class="font16 mb-5">Tax Type</button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5">IGST (Local)</button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5">Place of Supply</button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5"><i class="fa fa-check-circle font25"></i></button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5">TOS</button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5">Sample value</button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5">ITC</button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5"><i class="fa fa-check-circle font25"></i></button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5">TDS / TCS Deduct</button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5"><i class="fa fa-check-circle font25"></i></button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5">Total value before Tax</button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5"><input type="text" class="inputText" value="5"/></button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5">GST Tax Amount</button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5"><input type="text" class="inputText" value="10"/></button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5">Total value after Tax</button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5"><input type="text" class="inputText" value="10"/></button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5 text-link">Roundoff Value</button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5"><i class="fa fa-check-circle font25"></i></button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5">INVOICE value</button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5"><input type="text" class="inputText" value="10"/></button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5">INVOICE value</button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5"><input type="text" class="inputText" value="10"/></button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5">Reverse charge</button>
+														</div>
+														<div class="col-md-6">
+															<select class="font16 mb-5"><option type="text">Credit Note</option><option type="text">Debit Note</option></select>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5">GST Payable on Reverse Charge</button>
+														</div>
+														<div class="col-md-6">
+															<p class="font16 mb-5"><input type="text" class="inputText" value="5"/></button>
+														</div>
+														<div class="col-md-12">
+															<p class="font16 mt-15 mb-5 text-primary">Total value four hundered fifty only</button>
+														</div>
+													</div>
+												</div>
+											</div>
+											<hr/>
 										</div>
 									</div>
 								</div>
