--- a/master.html
+++ b/master.html
@@ -138,7 +138,7 @@
 														</div>
 														<div class="row">
 															<div class="col-sm-6 ">
-																<a href="#" class="termsCondition"> Terms &amp; Conditions</a>
+																<a href="#" class="termsCondition mb-15"> Terms &amp; Conditions</a>
 															</div>
 															<div class="col-sm-6">
 																<button type="button" id="editSection" class="btn bg-light-02 fontLato">
@@ -329,7 +329,7 @@
 													</div>
 													<div class="row mt-30">
 															<div class="col-sm-6 ">
-																<button type="button" id="save" class="btn  fontLato">
+																<button type="button" id="save" class="btn mb-15 fontLato">
 																	Save
 																</button>
 															</div>
@@ -361,16 +361,18 @@
 												</div>
 												<div class="col-md-12">
 												<div class="row">
-													<div class="col-md-3 pr-0"><div style="width:100%;height:75px" class="bg-light-02"></div></div>
-													<div class="col-md-3 pr-0"><div style="width:100%;height:75px" class="bg-light-02"></div></div>
-													<div class="col-md-3 pr-0"><div style="width:100%;height:75px" class="bg-light-02"></div></div>
-													<div class="col-md-3 pr-0"><div style="width:100%;height:75px" class="bg-light-02"></div></div>
+													<div class="col-xs-3 col-md-3 pr-0"><div style="width:100%;height:75px" class="bg-light-02"></div></div>
+													<div class="col-xs-3 col-md-3 pr-0"><div style="width:100%;height:75px" class="bg-light-02"></div></div>
+													<div class="col-xs-3 col-md-3 pr-0"><div style="width:100%;height:75px" class="bg-light-02"></div></div>
+													<div class="col-xs-3 col-md-3 pr-0"><div style="width:100%;height:75px" class="bg-light-02"></div></div>
 												</div>
 												<div class="row mt-10">
 													<div class="col-md-8">
-														<button type="button"  class="btn bg-light-02 col-md-12">Print Documents</button>
+														<button type="button"  class="mb-15 btn bg-light-02 col-md-12">Print Documents</button>
 													</div>
-													<button type="button"  class="col-md-4  btn bg-cta fontLato text-white">Preview</button>													
+													<div class="col-md-4">
+														<button type="button"  class="mb-15 btn bg-cta fontLato text-white">Preview</button>													
+													</div>
 												</div>
 												</div>
 											</div>
@@ -384,13 +386,17 @@
 														<div class="col-md-8">
 															<p class="font16 mt-5"> <i class="fa fa-window-close font20 fontred"></i> 2 Errors</button>
 														</div>
-														<button type="button"  class="col-md-4  btn bg-cta fontLato text-white">Preview</button>
+														<div class="col-md-4">
+															<button type="button"  class="mb-15  btn bg-cta fontLato text-white">Preview</button>
+														</div>
 														<div class="col-md-8">
 															<p class="font16 mt-5"> <i class="fa fa-warning font20 fontOrange"></i> 1 Warning</button>
 														</div>
-														<button type="button"  class="col-md-4  btn bg-cta fontLato text-white">Preview</button>
+														<div class="col-md-4">
+															<button type="button"  class="mb-15 btn bg-cta fontLato text-white">Preview</button>
+														</div>
 														<div class="col-md-12">
-															<a class="text-blue font16" href="#">Get help from support</a>
+															<a class="text-blue font16 mb-15" href="#">Get help from support</a>
 														</div>
 													</div>
 												</div>
@@ -402,82 +408,82 @@
 												</div>
 												<div class="col-md-12">
 													<div class="row">
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5">Tax Type</button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5">IGST (Local)</button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5">Place of Supply</button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5"><i class="fa fa-check-circle font25"></i></button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5">TOS</button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5">Sample value</button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5">ITC</button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5"><i class="fa fa-check-circle font25"></i></button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5">TDS / TCS Deduct</button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5"><i class="fa fa-check-circle font25"></i></button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5">Total value before Tax</button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5"><input type="text" class="inputText" value="5"/></button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5">GST Tax Amount</button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5"><input type="text" class="inputText" value="10"/></button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6  col-md-6">
 															<p class="font16 mb-5">Total value after Tax</button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5"><input type="text" class="inputText" value="10"/></button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5 text-link">Roundoff Value</button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5"><i class="fa fa-check-circle font25"></i></button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5">INVOICE value</button>
 														</div>
-														<div class="col-md-6">
+														<div class=col-sm-6 "col-md-6">
 															<p class="font16 mb-5"><input type="text" class="inputText" value="10"/></button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5">INVOICE value</button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5"><input type="text" class="inputText" value="10"/></button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5">Reverse charge</button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6  col-md-6">
 															<select class="font16 mb-5"><option type="text">Credit Note</option><option type="text">Debit Note</option></select>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5">GST Payable on Reverse Charge</button>
 														</div>
-														<div class="col-md-6">
+														<div class="col-sm-6 col-md-6">
 															<p class="font16 mb-5"><input type="text" class="inputText" value="5"/></button>
 														</div>
 														<div class="col-md-12">
