--- a/master.html
+++ b/master.html
@@ -44,7 +44,7 @@
 						<nav id="site-navigation" class="navbar">
 							<div class="collapse navbar-collapse navbar-ex1-collapse">
 								<ul class="nav navbar-nav navbar-right">
-									<li class="trial"><a href="#" class="hvr-push">Login</a></li>
+									<li class="trial"><a href="onboard.html" class="hvr-push">Login</a></li>
 								</ul>
 							</div>
 						</nav>
