--- a/signup.html
+++ b/signup.html
@@ -100,9 +100,11 @@
 											</div>
 											<div class="row mt-30">
 												<div class="col-sm-4 ">
+													<a href="master.html">
 													<button type="button" id="save" class="btn  fontLato">
 														Launch
 													</button>
+													</a>
 												</div>
 											</div>
 										</div>
